--- a/_includes/statcounter.html
+++ b/_includes/statcounter.html
@@ -1,15 +1,17 @@
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
-var sc_project=9135601;
+var sc_project=5357260;
 var sc_invisible=1;
-var sc_security="1fd2b255";
+var sc_security="14d7610a";
 var scJsHost = (("https:" == document.location.protocol) ?
 "https://secure." : "http://www.");
-document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script>
-<noscript><div class="statcounter"><a title="web stats"
-href="http://statcounter.com/free-web-stats/" target="_blank"><img
-class="statcounter" src="http://c.statcounter.com/9135601/0/1fd2b255/1/"
-alt="web stats"></a></div></noscript>
+<noscript><div class="statcounter"><a title="hits counter"
+href="http://statcounter.com/free-hit-counter/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/5357260/0/14d7610a/1/"
+alt="hits counter"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
