--- a/_sass/partials/_blog.scss
+++ b/_sass/partials/_blog.scss
@@ -18,7 +18,7 @@ article {
       margin: 0;
       &.meta {
         @extend .sans;
-        text-transform: uppercase;
+        /*text-transform: uppercase;*/
         position: absolute; top: 0;
       }
     }
