--- a/_includes/post/date.html
+++ b/_includes/post/date.html
@@ -7,7 +7,7 @@
 {% capture was_updated %}{{ updated | size }}{% endcapture %}
 
 {% if has_date != '0' %}
-  {% capture time %}<time datetime="{{ date | datetime | date_to_xmlschema }}" pubdate{% if updated %} data-updated="true"{% endif %}>{{ date | date: "%Y-%m-%d" }}</time>{% endcapture %}
+  {% capture time %}Posted on <i class="fa fa-clock-o"></i> <time datetime="{{ date | datetime | date_to_xmlschema }}" pubdate{% if updated %} data-updated="true"{% endif %}>{{ date | date: "%Y-%m-%d" }}</time>{% endcapture %}
 {% endif %}
 
 {% if was_updated != '0' %}
