--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -86,4 +86,23 @@ $("a#click-pages").click(function(){
   })();
 </script>
 {% endif %}
+{% if site.statcounter_project_id %}
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project={{site.statcounter_project_id}};
+var sc_invisible=1;
+var sc_security="{{site.statcounter_security_code}}";
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="hits counter"
+href="http://statcounter.com/free-hit-counter/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/{{site.statcounter_project_id}}/0/{{site.statcounter_security_code}}/1/"
+alt="hits counter"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+{% endif %}
 {% if page.comments %}{% include disqus_comments.html %}{% endif %}
