--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,8 +35,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/style.min.css" />
 
 {% if site.search %}<div class="search-wrapper">
     <div class="search-form">
