--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -99,7 +99,7 @@ scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script>
 <noscript><div class="statcounter"><a title="hits counter"
-href="http://statcounter.com/free-hit-counter/"
+href="https://statcounter.com/free-hit-counter/"
 target="_blank"><img class="statcounter"
 src="http://c.statcounter.com/{{site.statcounter_project_id}}/0/{{site.statcounter_security_code}}/1/"
 alt="hits counter"></a></div></noscript>
