--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    var host = "yoursite.com";
+    var host = "templecoding.com";
     if ((host == window.location.host) && (window.location.protocol != "https:"))
         window.location.protocol = "https";
 </script>
