--- a/app/assets/css/article.page.css
+++ b/app/assets/css/article.page.css
@@ -14,7 +14,7 @@
   @apply text-fuchsia-500 hover:text-pink-300 hover:underline transition-all duration-200 ease-in-out dark:text-pink-300 hover:dark:text-pink-500;
 }
 
-.article img {
+.article img, .article iframe {
   @apply mx-auto
 }
 
