--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -7,7 +7,7 @@ html {
 	--font-mono: "JetBrains Mono", monospace;
 
 	/* dark */
-	--brand-dark: var(--orange-3);
+	--brand-dark: var(--pink-5);
 	--text-1-dark: var(--gray-3);
 	--text-2-dark: var(--gray-5);
 	--surface-1-dark: var(--gray-12);
@@ -18,7 +18,7 @@ html {
 	--border-dark: var(--gray-9);
 
 	/* light */
-	--brand-light: var(--orange-10);
+	--brand-light: var(--purple-11);
 	--text-1-light: var(--gray-8);
 	--text-2-light: var(--gray-7);
 	--surface-1-light: var(--gray-0);
@@ -143,7 +143,7 @@ li {
 }
 
 .prose :is(ul, ol) {
-	list-style-type: "🔥";
+	list-style-type: disc;
 	padding-left: var(--size-5);
 }
 
@@ -157,4 +157,8 @@ li {
 	padding: var(--size-3);
 	border-radius: 8px;
 	tab-size: 2;
+}
+
+.prose :is(img) {
+	margin-inline: auto;
 }
