--- a/src/lib/assets/app.css
+++ b/src/lib/assets/app.css
@@ -1,187 +1,6 @@
 @import url(https://fonts.bunny.net/css?family=ibm-plex-sans:400|ibm-plex-sans-condensed:600,500);
 
-html {
-	/* pink */
-	--pink-1: #f5c6e3;
-	--pink-2: #f0a8d4;
-	--pink-3: #e97cbe;
-	--pink-4: #da449f;
-	--pink-5: #c42786;
-	--pink-6: #ae2377;
-	--pink-7: #7b1955;
-	--pink-8: #921d64;
-	--pink-9: #661446;
-
-	/* font */
-	--font-sans: "IBM Plex Sans", sans-serif;
-	--font-mono: "JetBrains Mono", monospace;
-	--font-heading: "IBM Plex Sans Condensed", sans-serif;
-
-	/* dark */
-	--brand-dark: var(--pink-5);
-	--text-1-dark: var(--gray-3);
-	--text-2-dark: var(--gray-5);
-	--text-3-dark: var(--gray-6);
-	--surface-1-dark: var(--gray-12);
-	--surface-2-dark: var(--gray-11);
-	--surface-3-dark: var(--gray-10);
-	--surface-4-dark: var(--gray-9);
-	--background-dark: var(--gradient-8);
-	--border-dark: var(--gray-9);
-	--brand-gradient-dark: linear-gradient(to bottom, var(--gray-0), var(--pink-1));
-
-	/* light */
-	--brand-light: var(--purple-11);
-	--text-1-light: var(--gray-8);
-	--text-2-light: var(--gray-7);
-	--text-3-light: var(--gray-6);
-	--surface-1-light: var(--gray-0);
-	--surface-2-light: var(--gray-1);
-	--surface-3-light: var(--gray-2);
-	--surface-4-light: var(--gray-3);
-	--background-light: none;
-	--border-light: var(--gray-4);
-	--brand-gradient-light: linear-gradient(to bottom, var(--gray-0), var(--pink-1));
-}
-
-:root {
-	color-scheme: dark;
-
-	--brand: var(--brand-dark);
-	--brand-gradient: var(--brand-gradient-dark);
-	--text-1: var(--text-1-dark);
-	--text-2: var(--text-2-dark);
-	--text-3: var(--text-3-dark);
-	--surface-1: var(--surface-1-dark);
-	--surface-2: var(--surface-2-dark);
-	--surface-3: var(--surface-3-dark);
-	--surface-4: var(--surface-4-dark);
-	--background: var(--background-dark);
-	--border: var(--border-dark);
-}
-
-@media (prefers-color-scheme: light) {
-	:root {
-		color-scheme: light;
-
-		--brand: var(--brand-light);
-		--brand-gradient: var(--brand-gradient-light);
-		--text-1: var(--text-1-light);
-		--text-2: var(--text-2-light);
-		--text-3: var(--text-3-light);
-		--surface-1: var(--surface-1-light);
-		--surface-2: var(--surface-2-light);
-		--surface-3: var(--surface-3-light);
-		--surface-4: var(--surface-4-light);
-		--background: var(--background-light);
-		--border: var(--border-light);
-	}
-}
-
-[color-scheme="dark"] {
-	color-scheme: dark;
-
-	--brand: var(--brand-dark);
-	--brand-gradient: var(--brand-gradient-dark);
-	--text-1: var(--text-1-dark);
-	--text-2: var(--text-2-dark);
-	--text-3: var(--text-3-dark);
-	--surface-1: var(--surface-1-dark);
-	--surface-2: var(--surface-2-dark);
-	--surface-3: var(--surface-3-dark);
-	--surface-4: var(--surface-4-dark);
-	--background: var(--background-dark);
-	--border: var(--border-dark);
-}
-
-[color-scheme="light"] {
-	color-scheme: light;
-
-	--brand: var(--brand-light);
-	--brand-gradient: var(--brand-gradient-light);
-	--text-1: var(--text-1-light);
-	--text-2: var(--text-2-light);
-	--text-3: var(--text-3-light);
-	--surface-1: var(--surface-1-light);
-	--surface-2: var(--surface-2-light);
-	--surface-3: var(--surface-3-light);
-	--surface-4: var(--surface-4-light);
-	--background: var(--background-light);
-	--border: var(--border-light);
-}
-
-html,
-body {
-	height: 100%;
-}
-
-html {
-	color: var(--text-1);
-	accent-color: var(--link);
-	background-image: var(--background);
-	background-attachment: fixed;
-}
-
-body > div {
-	background: var(--surface-2);
-}
-
-ul,
-ol {
-	list-style: none;
-	padding: 0;
-}
-
-li {
-	padding-inline-start: 0;
-}
-
-.surface-1 {
-	background-color: var(--surface-1);
-	color: var(--text-2);
-}
-
-.surface-2 {
-	background-color: var(--surface-2);
-	color: var(--text-2);
-}
-
-.surface-3 {
-	background-color: var(--surface-3);
-	color: var(--text-1);
-}
-
-.surface-4 {
-	background-color: var(--surface-4);
-	color: var(--text-1);
-}
-
-.prose :is(h2, h3, h4, h5, h6) {
-	margin-top: var(--size-8);
-	margin-bottom: var(--size-3);
-}
-
-.prose p:not(:is(h2, h3, h4, h5, h6) + p) {
-	margin-top: var(--size-7);
-}
-
-.prose :is(ul, ol) {
-	list-style-type: disc;
-	padding-left: var(--size-5);
-}
-
-.prose :is(ul, ol) li {
-	margin-block: var(--size-2);
-	padding-inline-start: var(--size-2);
-}
-
-.prose pre {
-	max-inline-size: 100%;
-	padding: var(--size-3);
-	border-radius: 8px;
-	tab-size: 2;
-}
-
-.prose :is(img) {
-	margin-inline: auto;
-}
+/* Write your global styles here, in PostCSS syntax */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
